chore: query optimisation in session detail page